server/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: catbird
  labels:
    name: catbird
    app: catbird-mls
